--- a/landing/index.html
+++ b/landing/index.html
@@ -8,27 +8,385 @@
 		<link rel="stylesheet" href="../css/app.css">
 	</head>
 	<body>
-		<a href="#" title="" class="testes">test<span class="test">●</span></a>
 		<div class="globalWrapper-landing container" id="glovalContainerLanding">
-			<header class="landingHeader row">
-				<h1 class="title">Illustrator</h1>
-				<p class="lead">コヨミイイラストマッチングサービスに<br />ご協力いただいているイラストレーターの皆さま</p>
+			<header class="landingHeader row collapse">
+				<div class="column small-offset-3 small-9">
+					<!-- <h1 class="title">Illustrator</h1> -->
+					<svg id="headerLogo" data-name="レイヤー 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 120"><title>illustrator</title>
+					<path class="logo-i" d="M22.18,22.11V85.34H7.58V22.11h14.6Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-l1" d="M56.31,16.23V85.34H42.66V16.23H56.31Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-l2" d="M88.93,16.23V85.34H75.27V16.23H88.93Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-u" d="M121.16,43.06V66.38c0,1.9.19,4.83,2.37,6.83a8.05,8.05,0,0,0,5.69,2,8.46,8.46,0,0,0,5.78-2c2-1.9,2.28-4.74,2.28-6.83V43.06h13.65V67.71c0,4.83-.47,9.38-4.74,13.56-4.83,4.74-11.95,5.5-17,5.5-5.21,0-12.23-.76-17.06-5.5-3.89-3.79-4.65-8.06-4.65-12.7V43.06h13.65Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-s" d="M195,53.87a15.52,15.52,0,0,0-7.49-2.37,5.8,5.8,0,0,0-3.89,1.23,2.92,2.92,0,0,0-.85,1.9,2.21,2.21,0,0,0,1.33,1.9,24.55,24.55,0,0,0,4.08,1.42l3.6,1.14a18,18,0,0,1,7,3.7,10.08,10.08,0,0,1,3.32,8.06,15.35,15.35,0,0,1-4.36,11.09c-4.17,4.17-9.29,4.83-13.75,4.83-5.69,0-11.85-1.23-17.35-6.07l5.78-9.2a23.48,23.48,0,0,0,4.65,3.13A12.76,12.76,0,0,0,182.78,76c0.85,0,3,0,4.27-.95a3.6,3.6,0,0,0,1.42-2.75A2.79,2.79,0,0,0,187,69.8a18,18,0,0,0-4.17-1.52l-3.41-1a16.88,16.88,0,0,1-6.83-3.89,10.43,10.43,0,0,1-3-7.68,13.1,13.1,0,0,1,4.08-9.76c3.79-3.51,8.91-4.27,12.8-4.27a26.68,26.68,0,0,1,14,3.6Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-t1" d="M231.89,54.06V85.34H218.24V54.06H213.5v-11h4.74V29.41h13.65V43.06h8.44v11h-8.44Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-r1" d="M253.79,43.06h13.65V49.7a15.17,15.17,0,0,1,5.31-5.88,13.08,13.08,0,0,1,7.3-1.8,13.7,13.7,0,0,1,4.46.66l-0.76,12.8A12.88,12.88,0,0,0,277.59,54a8.92,8.92,0,0,0-6.83,2.84c-3,3.22-3.32,7.77-3.32,11.38V85.34H253.79V43.06Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-a" d="M330.2,43.06h13.65V85.34H330.2V80.23a14.09,14.09,0,0,1-12.51,6.54c-6.07,0-11.19-1.52-15.83-6.45a22.37,22.37,0,0,1-6.16-15.83,24.08,24.08,0,0,1,6.54-17.06,20.38,20.38,0,0,1,14.69-5.78c3.6,0,9.39.85,13.27,6.16V43.06ZM312.85,56.43a10.57,10.57,0,0,0-3.13,7.68,10.9,10.9,0,0,0,2.84,7.58A11.21,11.21,0,0,0,320.63,75a10.11,10.11,0,0,0,7.11-2.94,11.22,11.22,0,0,0,.19-15.74,11.42,11.42,0,0,0-7.58-2.94A10.76,10.76,0,0,0,312.85,56.43Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-t2" d="M376.09,54.06V85.34H362.44V54.06H357.7v-11h4.74V29.41h13.65V43.06h8.44v11h-8.44Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-o" d="M439.23,79.94c-3.79,3.79-10.24,6.83-18.49,6.83s-14.69-3-18.49-6.83a22.67,22.67,0,0,1,0-31.47c3.79-3.79,10.24-6.83,18.49-6.83s14.69,3,18.49,6.83A22.67,22.67,0,0,1,439.23,79.94Zm-26.17-23.7a10.7,10.7,0,0,0-3.13,8,10.72,10.72,0,0,0,3.13,8,10.51,10.51,0,0,0,7.77,3,10.36,10.36,0,0,0,7.58-3,10.7,10.7,0,0,0,3.13-8,10.7,10.7,0,0,0-3.13-8A11.23,11.23,0,0,0,413.06,56.24Z" transform="translate(-7.58 -16.23)"/>
+					<path class="logo-r2" d="M461.7,43.06h13.65V49.7a15.17,15.17,0,0,1,5.31-5.88A13.08,13.08,0,0,1,488,42a13.7,13.7,0,0,1,4.46.66l-0.76,12.8A12.88,12.88,0,0,0,485.5,54a8.91,8.91,0,0,0-6.83,2.84c-3,3.22-3.32,7.77-3.32,11.38V85.34H461.7V43.06Z" transform="translate(-7.58 -16.23)"/></svg>
+					<p class="lead">コヨミイイラストマッチングサービスに<br />ご協力いただいているイラストレーターの皆さま</p>
+				</div>
 			</header><!-- /header -->
 			<div class="authorWrapper row small-up-4">
-				<div class="author column one" id="authorPiece">
-					<a href="#" class="author__inner red">
+				<div class="author column one">
+					<a href="#" class="author__inner">
 						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
-						<p class="author__text">仮に名前を入れるならここに入れる</p>
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
 					</a>
 				</div>
 				<div class="author column two">
-					<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
 				</div>
 				<div class="author column three">
-					<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
 				</div>
 				<div class="author column four">
-					<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-06.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-07.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-08.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-06.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-07.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-08.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-06.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-07.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-08.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-06.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-07.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-08.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column one">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column two">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-06.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column three">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-07.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
+				</div>
+				<div class="author column four">
+					<a href="#" class="author__inner">
+						<img src="../img/white.gif" data-original="../img/thumb-08.png" class="lazy">
+						<p class="author__text">
+							<span class="en">Takashi&nbsp;Yamaguchi</span><br />
+							<span class="ja">山口&nbsp;貴士</span>
+						</p>
+					</a>
 				</div>
 				<!-- <div class="author column one">
 					<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
