landingひとまず完了

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<a href="landing/" class="leftUnderline topCategory">ランディング</a><br />
 				<a href="animation/" class="leftUnderline topCategory">アニメーション</a><br />
 				<a href="article/" class="leftUnderline topCategory">リスト</a><br />
+				<a href="font/" class="leftUnderline topCategory">フォント</a><br />
 			</section>
 		</div>
 
