--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-	<title>takashiyamaguchi | sandbox</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1.0">
+<title>takashi YAMAGUCHI | sandbox</title>
+<meta name="keywords" content="sandbox">
+<meta name="description" content="takashi,yamaguchi,sandbox">
+<meta property="og:locale" content="ja_JP">
+<meta property="og:type" content="website">
+<meta property="og:title" content="takashi YAMAGUCHI | sandbox">
+<meta property="og:description" content="takashiYAMAGUCHI sandbox">
+<meta property="og:url" content="http://takashiyamaguchi.github.io/">
+<meta property="og:image" content="">
+<meta property="og:site_name" content="takashiYAMAGUCHI sandbox">
+
+<link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css">
+<link rel="stylesheet" type="text/css" href="src/css/index.css">
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="src/js/script.js"></script>
+
 </head>
 <body>
 
-<h1>takashiyamaguchi | sandbox</h1>
-<p>test</p>
+<div class="wrapper">
+	<h1 class="title">こんにちは</h1>
+	<a href="#" class="btn">サンプルボタン</a>
+	<p>てすとてすと</p>
+</div>
 
 </body>
 </html>
