var.scssにブレイクポイントの変数を追加

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 <script src="src/js/script.js"></script>
 
 </head>
-<body>
-
-<div class="wrapper">
-	<h1 class="title">こんにちは</h1>
-	<a href="#" class="btn">サンプルボタン</a>
-	<p>てすとてすと</p>
+<body id="page_index">
+<div class="globalwrapper">
+	<header>
+		<h1>takashi YAMAGUCHI | sandbox</h1>
+		<p>test</p>
+	</header>
+	<section>
+		
+	</section>
 </div>
-
 </body>
 </html>
