--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
+<html>
 <head>
-  <!-- ① A-Frame を読み込む -->
-  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <!-- ② AR.js を読み込む -->
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+  <meta charset="utf-8">
+  <title>yama</title>
 </head>
-<body style='margin: 0; overflow: hidden;'>
-<!-- ③ シーンを追加 -->
-<a-scene embedded arjs>
-  <!-- ④ マーカーを追加 ここから -->
-  <a-marker preset="hiro">
-    <!-- ⑤ オブジェクトの追加 -->
-    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#111">
-      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
-      </a-animation>
-    </a-sphere>
-  </a-marker>
-
-  <!-- ⑥ カメラを追加 -->
-  <a-entity camera></a-entity>
-</a-scene>
+<body>
+  <main>
+    <ul>
+      <li><a href="./p5js/index.html">p5js</a></li>
+      <li><a href="./svg/index.html">svg</a></li>
+      <li><a href="./particle1/index.html">particle1</a></li>
+      <li><a href="./particle2/index.html">particle2</a></li>
+    </ul>
+  </main>
 </body>
 </html>
