--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./p5js/index.html">p5js</a></li>
       <li><a href="./svg/index.html">svg</a></li>
+      <li><a href="./svg2/index.html">svg2</a></li>
       <li><a href="./particle1/index.html">particle1</a></li>
       <li><a href="./particle2/index.html">particle2</a></li>
     </ul>
