--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="./svg3/index.html">svg3</a></li>
       <li><a href="./particle1/index.html">particle1</a></li>
       <li><a href="./particle2/index.html">particle2</a></li>
+      <li><a href="./react1/index.html">react1</a></li>
     </ul>
   </main>
 </body>
