--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>yama</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T2M3FKQM6W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T2M3FKQM6W');
+  </script>
 </head>
 <body>
   <main>
